# src/routes/index.js
@@ -1,6 +1,7 @@
 const express = require("express");
 
 const authRoutes = require("./auth.routes");
+const usuariosRoutes = require("./usuarios.routes");
 const authMiddleware = require("../middleware/auth.middleware");
 
 const router = express.Router();
@@ -21,5 +22,6 @@ router.get("/protected/health", authMiddleware, (req, res) => {
 });
 
 router.use("/auth", authRoutes);
+router.use("/usuarios", usuariosRoutes);
 
 module.exports = router;
